reduce mixins